# liph

./: .gitignore  .hlint.yaml  Builtins.hs  Eval.hs  Evaluator.hs  Parser.hs  README.md  cabal.project.freeze  flake.nix  liph.cabal  liph.nix  main.hs  parser.hs
app/: Eval.hs  Main.hs  Parser.hs
